@@ -27,6 +27,7 @@ interface:
 - removed SCIPvarGetUbAtIndex() and added SCIPgetVarUbAtIndex()
 - removed SCIPVarGetBdAtIndex() and added SCIPgetVarBdAtIndex()
 - removed SCIPvarWasFixedAtIndex() and added SCIPgetVarWasFixedAtIndex()
+- new command line parameter -v to print detailed build options
 
 Makefile:
 - revise sub-makefiles for MSVC on MinGW
